new-demo Fix validation